Corrected paths